--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ Flask-Login==0.6.2
 python-dotenv==1.0.0
 psycopg2-binary==2.9.6
 gunicorn==20.1.0
-paypal-checkout-serversdk
+gevent==22.10.2
+paypal-checkout-serversdk==1.0.1
+requests==2.31.0
+beautifulsoup4==4.12.2
+tldextract==5.1.1
 Werkzeug==2.3.7
